@startuml

title __BEGINACTIVITY's Class Diagram__\n

  namespace com.sapphireStar.android_project {
    namespace BeginActivity {
      class com.sapphireStar.android_project.BeginActivity.MainActivity {
          + a : int
          + id : String
          + password : String
          + username : String
          - forget_password : Button
          - quick_register : Button
          - sing_in : Button
          # onCreate()
          # onRestart()
          # onStop()
          - initView()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace BeginActivity {
      class com.sapphireStar.android_project.BeginActivity.MainActivity.OnClick {
          + onClick()
      }
    }
  }
  

  com.sapphireStar.android_project.BeginActivity.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.BeginActivity.MainActivity o-- com.sapphireStar.android_project.VideoBackground.VideoViewBackground : videoview
  com.sapphireStar.android_project.BeginActivity.MainActivity +-down- com.sapphireStar.android_project.BeginActivity.MainActivity.OnClick
  com.sapphireStar.android_project.BeginActivity.MainActivity.OnClick .up.|> android.view.View.OnClickListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
